========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-04-04

  - Fixed #267: Implemented a price source from the IEX exchange.


2018-04-03

  - Implemented Quandl importer on its REST API. Another implementation, based
    on the Quandl Python client API was proposed by Hugo Ideler (see PR34), but
    I didn't want to add a dependency on the client library (nor on Pandas), and
    after reading the description on Quandl API's website, I figured the library
    was simple enough the output could be parsed directly. I wrote a new
    implementation from scratch, parsing just the time-series datasets.

  - Merged PR68 from Martin Michlmayr, added Travis Yaml support file.

  - Fixed Emacs functionality to uncomment regions (change submitted by Stefan
    Monnier on the list).


2018-04-02

  - Fixed #193: Removed the broken Google Finance price source importer. Google
    has removed this service in the favor of a special Search page and this has
    been broken for the recent little while.

  - Fixed #203: Updated the Yahoo price source implementation to use the
    undocumented v7 and v8 APIs; moved away from the "ichart" and "download"
    APIs. The Yahoo importer is back in function.

    This introduced a new dependency on the awesome 'requests' library, which
    really, was quite inevitable).


2018-04-01

  - Merged PR65: Use parse_version to compare versions; then replicated
    parse_version() locally to avoid the dependency on setuptools.

  - Merged PR15 by Johannes Harms:
    Added the following features to the forecasting plugin:
    - Yearly repetition of recurring transactions (instead of just monthly)
    - Users may optionally specify an end date
    - Users may optionally specify the number of repetitions
    "I used this code to calculate scenarios for a possible real estate purchase
    and I contribute a cleaned-up version as an example file."
