@@ -6,6 +6,8 @@ Note: This file contains only changes in the 'default' branch.
 
 2018-04-04
 
+  - Bubble up error from Yahoo price source.
+
   - Fixed #267: Implemented a price source from the IEX exchange.
 
 
